use openJdk and openJfx for linux distrib
Former-commit-id: 94f30d3f8c3c17ffe6474669715d1ae5b4a657f6